# data-engineering-zoomcamp

01-docker-terraform/docker-workshop/pipeline/: README.md  dockerfile  ingest_data.py  notebook.ipynb  pipeline.py
01-docker-terraform/terraform-demo/: README.md  main.tf
02-workflow-orchestration/flows/: 02_python.yaml  06_gcp_kv.yaml
homework/01-docker-terraform/: README.md
homework/01-docker-terraform/docker-sql/: dockerfile  ingest_data.py  pyproject.toml
homework/01-docker-terraform/terraform/: main.tf  varibles.tf
homework/02-workflow-orchestration/: README.md
