[project]
name = "docker-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.0",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.46",
    "tqdm>=4.67.1",
]
